# yolo-boost

./: .dockerignore  .env.example  .gitignore  CODEBASE.md  Dockerfile  Dockerfile.mlflow  README.md  data.yaml  docker-compose.yml  docker-entrypoint.sh  presets.py  pyproject.toml  requirements.txt  run_study.py  train_yolo_optuna.py
src/yolo_boost/: .yolo-boost-config  __init__.py  cli.py  presets.py  trainer.py
